# cargo-init-ws

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  terminal.rs
